Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Documentation]
  - Mention that this is experimental, #3.

  - Document issue with hash references, #4.

  - Combined KNOWN ISSUES with BUGS section.

  [Other]
  - Remove perltidy files that were accidentally included in
    distribution.

v0.2.1    2018-11-08 21:49:49+00:00 Europe/London
  [Bug Fixes]
  - Set required minimum version of Type::Tiny.

v0.2.0    2018-11-08 20:30:31+00:00 Europe/London
  [Enhancements]
  - Add support for parameterized types.

  [Bug Fixes]
  - Added missing declaration of the ConstHashRef type.

  - Frozen coercions.

  [Toolchain]
  - Updated module metadata.

v0.1.1    2018-11-07 22:32:09+00:00 Europe/London
  [Bug Fixes]
  - Clean namespace.

  - Constraint checks are now recursive.

  [Other]
  - Removed unnecessary prerequisite.

  - Added recommended prerequisite for Type::Tiny::XS and
    Ref::Util::XS.

  [Tests]
  - Fixed minimum prerequisite for Moo.

  - Fixed typo in test-case description.

v0.1.0    2018-11-07 07:31:02+00:00 Europe/London
  - Initial version released.